# PluginCore

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  Readme.ru.md  rebuild_all.sh
PluginLoader/: CMakeLists.txt  PluginLoader  Readme.md
PluginLoader/src/: main.cpp
cmake/: PluginCoreConfig.cmake.in
include/PluginCore/: Core  IModel  IPlugin
include/PluginCore/ArgsBuilder/: Builder
include/PluginCore/Logger/: Log
src/: Core.cpp  Core.hpp  IModel.cpp  IModel.hpp  IPlugin.hpp  SharedLib.hpp  Structs.hpp  src.pri
src/ArgsBuilder/: Builder.cpp  Builder.hpp
src/Logger/: Log.cpp  Log.hpp
tools/: addEasyBuildCommands.sh  build_all_debug.sh  build_all_release.sh  clangd_reconfigure.sh  clean_build.sh  create_workspace.sh  gen_plugins.py  runtime_install.sh  updateDepsList.sh  workspace.cmake
tools/templates_for_gen_plugins/: model_cmake.txt  model_cpp.txt  model_hpp.txt  model_include.txt  plugin_cmake.txt  plugin_cpp.txt  plugin_hpp.txt
